# ds-python-piscine

00/ex00/: Hello.py
00/ex01/: format_ft_time.py
00/ex02/: find_ft_type.py  tester.py
00/ex03/: NULL_not_found.py  tester.py
00/ex04/: whatis.py
00/ex05/: building.py
00/ex06/: filterstring.py  ft_filter.py
00/ex07/: sos.py
00/ex08/: Loading.py
00/ex09/: README.md  pyproject.toml
00/ex09/ft_package/: ft_package.py
01/ex00/: give_bmi.py
01/ex01/: array2D.py
01/ex02/: load_image.py
