[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="Matheus Oliveira", email="maolivei@student.42sp.org.br" },
]
description = "My first Python package"
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/araggohnxd/ds-python-piscine/tree/main/00/ex09"
Issues = "https://github.com/araggohnxd/ds-python-piscine/issues"
